[metadata]
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.2.dev0

[bdist_wheel]
universal = 1

[tool:pytest]
testpaths = tests doc pydispatch
addopts = --doctest-modules --doctest-glob="*.rst" --doctest-glob="*.md"
doctest_plus = enabled
asyncio_mode = auto
