[metadata]
name = python-dispatch
version = 0.2.2
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/python-dispatch
project_urls =
    Documentation = https://python-dispatch.readthedocs.io
    Source = https://github.com/nocarryr/python-dispatch
    Tracker = https://github.com/nocarryr/python-dispatch/issues
description = Lightweight Event Handling
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE.txt
keywords = event properties dispatch
platforms = any
python_requires = >=3.6
install_requires =
    importlib_metadata;python_version<'3.8'
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Software Development
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:

[options.packages.find]
exclude = tests

[options.package_data]
* = LICENSE*, README*


[tool:pytest]
testpaths = tests doc pydispatch
addopts = --doctest-modules --doctest-glob="*.rst" --doctest-glob="*.md"
doctest_plus = enabled
asyncio_mode = auto
