[bdist_wheel]
universal = False

[metadata]
name = python-dispatch-sphinx
version = 0.2.2
author = Matthew Reid
author_email = matt@nomadic-recording.com
url = https://github.com/nocarryr/python-dispatch
project_urls =
    Documentation = https://python-dispatch.readthedocs.io
    Source = https://github.com/nocarryr/python-dispatch
    Tracker = https://github.com/nocarryr/python-dispatch/issues
description = Sphinx extension for python-dispatch
long_description = file: README.rst
long_description_content_type = text/x-rst
license = MIT
license_file = LICENSE
platforms = any
python_requires = >=3.6
classifiers =
    Development Status :: 2 - Pre-Alpha
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Intended Audience :: Developers
    Framework :: Sphinx
    Framework :: Sphinx :: Extension
    Topic :: Documentation
    Topic :: Documentation :: Sphinx
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: Software Development :: Documentation


[options]
packages = find:
install_requires =
    python-dispatch
    sphinx>=4.5,<5
    importlib_metadata;python_version<'3.8'


[options.packages.find]
exclude = tests


[options.package_data]
* = LICENSE, README*

[tool:pytest]
testpaths = tests
